[package]
name = "repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
json = "0.12.4"
serenity = { version="0.11",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]  }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"


[profile.dev]
strip = true